--- a/maquetacion/src/custom-theme.scss
+++ b/maquetacion/src/custom-theme.scss
@@ -1,38 +1,17 @@
+@use "@material/textfield" with($height: 52px);
+@use "@material/radio" with ($minimum-size: 16px, $ripple-size: 50px);
+@use "@material/button/_button-shared-theme.scss" with ($height: 42px, $minimum-height:30px);
+@use "@material/data-table/_data-table-theme.scss" with($row-height:48px, $minimum-row-height: 0);
+@use "@material/button";
 
-// Custom Theming for Angular Material
-// For more information: https://material.angular.io/guide/theming
-@use '@angular/material' as mat;
-// Plus imports for other components in your app.
+@import "./theme/theme";
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&family=Roboto:wght@300;400;500;700&display=swap");
 
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
-@include mat.core();
-
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
-$maquetacion-primary: mat.define-palette(mat.$indigo-palette);
-$maquetacion-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-
-// The warn palette is optional (defaults to red).
-$maquetacion-warn: mat.define-palette(mat.$red-palette);
-
-// Create the theme object. A theme consists of configurations for individual
-// theming systems such as "color" or "typography".
-$maquetacion-theme: mat.define-light-theme((
-  color: (
-    primary: $maquetacion-primary,
-    accent: $maquetacion-accent,
-    warn: $maquetacion-warn,
-  )
-));
-
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
-@include mat.all-component-themes($maquetacion-theme);
-
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+html {
+  font-size: 0.875rem;
+}
