--- a/maquetacion/src/custom-theme.scss
+++ b/maquetacion/src/custom-theme.scss
@@ -1,8 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&family=Roboto:wght@300;400;500;700&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 html {
-  font-size: 0.7692307692307692rem;
+  font-size: 0.625rem ; 
 }
