--- a/maquetacion/src/styles.scss
+++ b/maquetacion/src/styles.scss
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import "./theme/theme";
+@import "./theme/_theme";
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&family=Roboto:wght@300;400;500;700&display=swap");
 
 * {
