--- a/maquetacion/src/theme/_theme.scss
+++ b/maquetacion/src/theme/_theme.scss
@@ -1,7 +1,7 @@
 @use "@angular/material" as mat;
 @use "./mixins.scss" as variants;
 @use "sass:map";
-
+@import "./typography";
 @import "./colors";
 
 @include mat.core();
@@ -81,5 +81,5 @@ $light-theme-variants: (
   warning: $warning-color,
 );
 
-  @include mat.all-component-themes($light-theme);
-  @include variants.color($light-theme, $light-theme-variants);
+@include mat.all-component-themes($light-theme);
+@include variants.color($light-theme, $light-theme-variants);
