--- a/maquetacion/src/theme/_typography.scss
+++ b/maquetacion/src/theme/_typography.scss
@@ -4,28 +4,28 @@
 $h3: mat.define-typography-level(
   $font-size: 2.8rem,
   $font-weight: 500,
-  $line-height: 33.6,
+  $line-height: 33.6px,
   $letter-spacing: 0px !important,
   $font-family: Nunito !important,
 );
 $h4: mat.define-typography-level(
   $font-weight: 600,
   $font-size: 2rem,
-  $line-height: 20,
+  $line-height: 20px,
   $letter-spacing: 0.25 !important,
   $font-family: Nunito !important,
 );
 $h5: mat.define-typography-level(
   $font-weight: 600,
   $font-size: 1.8rem,
-  $line-height: 28.8,
+  $line-height: 28.8px,
   $letter-spacing: 0 !important,
   $font-family: Nunito !important,
 );
 $h6: mat.define-typography-level(
   $font-weight: 600,
   $font-size: 1.6rem,
-  $line-height: 22.4,
+  $line-height: 22.4px,
   $letter-spacing: 0.15 !important,
   $font-family: Nunito !important,
 );
@@ -33,7 +33,7 @@ $overline: mat.define-typography-level(
   $font-family: Roboto,
   $font-weight: 400,
   $font-size: 1.1rem,
-  $line-height: 29.26,
+  $line-height: 29.26px,
   $letter-spacing: 1,
 );
 $typography-global-config: map.merge(
@@ -44,7 +44,7 @@ $typography-global-config: map.merge(
         $font-family: Nunito,
         $font-weight: 300,
         $font-size: 4rem,
-        $line-height: 56,
+        $line-height: 56px,
         $letter-spacing: -1.5,
       ),
     $headline-6:
@@ -52,7 +52,7 @@ $typography-global-config: map.merge(
         $font-family: Nunito,
         $font-weight: 400,
         $font-size: 3.2rem,
-        $line-height: 38.4,
+        $line-height: 38.4px,
         $letter-spacing: -0.5,
       ),
     $subtitle-1:
@@ -60,7 +60,7 @@ $typography-global-config: map.merge(
         $font-family: Roboto,
         $font-weight: 500,
         $font-size: 1.4rem,
-        $line-height: 19.6,
+        $line-height: 19.6px,
         $letter-spacing: 0.15,
       ),
     $subtitle-2:
@@ -68,7 +68,7 @@ $typography-global-config: map.merge(
         $font-family: Roboto,
         $font-weight: 500,
         $font-size: 1.3rem,
-        $line-height: 18.2,
+        $line-height: 18.2px,
         $letter-spacing: 0.1,
       ),
     $body-1:
@@ -76,7 +76,7 @@ $typography-global-config: map.merge(
         $font-family: Roboto,
         $font-weight: 400,
         $font-size: 1.3rem,
-        $line-height: 15.6,
+        $line-height: 15.6px,
         $letter-spacing: 0.17,
       ),
     $body-2:
@@ -84,23 +84,23 @@ $typography-global-config: map.merge(
         $font-family: Roboto,
         $font-weight: 400,
         $font-size: 1.4rem,
-        $line-height: 19.6,
+        $line-height: 19.6px,
         $letter-spacing: 0.15,
       ),
     $button:
       mat.define-typography-level(
         $font-family: Roboto,
         $font-weight: 500,
-        $font-size: 0.8125rem,
-        $line-height: 1.75,
-        $letter-spacing: 0.02857em,
+        $font-size: 1.27rem,
+        $line-height: 18px,
+        $letter-spacing: 0.4,
       ),
     $caption:
       mat.define-typography-level(
         $font-family: Roboto,
         $font-weight: 400,
         $font-size: 1.1rem,
-        $line-height: 15.4,
+        $line-height: 15.4px,
         $letter-spacing: 0.4,
       ),
   ),
@@ -112,6 +112,7 @@ $typography-global-config: map.merge(
     "overline": $overline,
   )
 );
+
 .mat-headline-5,
 .mat-h1,
 h1,
