--- a/maquetacion/src/styles.scss
+++ b/maquetacion/src/styles.scss
@@ -1,4 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+@use "@material/textfield" with($height: 52px);
+@use "@material/radio" with (
+  $minimum-size: 16px,
+  $ripple-size: 50px
+);
+@use "@material/button/_button-shared-theme.scss" with (
+  $height: 42px,
+  $minimum-height: 30px
+);
+@use "@material/data-table/_data-table-theme.scss"
+  with($row-height: 48px, $minimum-row-height: 0);
+@use "@material/button";
+@use "@material/chips";
+
 @import "./theme/_theme";
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&family=Roboto:wght@300;400;500;700&display=swap");
 
@@ -6,7 +20,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-};
+}
 html {
   font-size: 0.625rem;
-};
+}
