--- a/maquetacion/src/theme/_theme.scss
+++ b/maquetacion/src/theme/_theme.scss
@@ -3,6 +3,7 @@
 @use "sass:map";
 @import "./typography";
 @import "./colors";
+@import "./sizes";
 
 @include mat.core();
 
@@ -74,12 +75,10 @@ $dark-theme: map.deep-merge(
     ),
   )
 );
-
 $light-theme-variants: (
   success: $success-color,
   info: $info-color,
   warning: $warning-color,
 );
-
 @include mat.all-component-themes($light-theme);
 @include variants.color($light-theme, $light-theme-variants);
