--- a/maquetacion/src/theme/_typography.scss
+++ b/maquetacion/src/theme/_typography.scss
@@ -1,40 +1,39 @@
 @use "@angular/material" as mat;
 @use "sass:map";
-
 $h3: mat.define-typography-level(
   $font-size: 2.8rem,
   $font-weight: 500,
-  $line-height: 33.6px,
-  $letter-spacing: 0px !important,
+  $line-height: 1.167,
+  $letter-spacing: 0em !important,
   $font-family: Nunito !important,
 );
 $h4: mat.define-typography-level(
   $font-weight: 600,
   $font-size: 2rem,
-  $line-height: 20px,
-  $letter-spacing: 0.25 !important,
+  $line-height: 1.235,
+  $letter-spacing: 0.00735em !important,
   $font-family: Nunito !important,
 );
 $h5: mat.define-typography-level(
   $font-weight: 600,
   $font-size: 1.8rem,
-  $line-height: 28.8px,
-  $letter-spacing: 0 !important,
+  $line-height: 1.26,
+  $letter-spacing: 0em !important,
   $font-family: Nunito !important,
 );
 $h6: mat.define-typography-level(
   $font-weight: 600,
   $font-size: 1.6rem,
-  $line-height: 22.4px,
-  $letter-spacing: 0.15 !important,
+  $line-height: 1.6,
+  $letter-spacing: 0.0075em !important,
   $font-family: Nunito !important,
 );
 $overline: mat.define-typography-level(
   $font-family: Roboto,
   $font-weight: 400,
   $font-size: 1.1rem,
-  $line-height: 29.26px,
-  $letter-spacing: 1,
+  $line-height: 2.4,
+  $letter-spacing: 0.071em,
 );
 $typography-global-config: map.merge(
   mat.define-typography-config(
@@ -44,64 +43,64 @@ $typography-global-config: map.merge(
         $font-family: Nunito,
         $font-weight: 300,
         $font-size: 4rem,
-        $line-height: 56px,
-        $letter-spacing: -1.5,
+        $line-height: 1.167,
+        $letter-spacing: -0.01562em,
       ),
     $headline-6:
       mat.define-typography-level(
         $font-family: Nunito,
         $font-weight: 400,
         $font-size: 3.2rem,
-        $line-height: 38.4px,
-        $letter-spacing: -0.5,
+        $line-height: 1.2,
+        $letter-spacing: -0.00833em,
       ),
     $subtitle-1:
       mat.define-typography-level(
         $font-family: Roboto,
         $font-weight: 500,
         $font-size: 1.4rem,
-        $line-height: 19.6px,
-        $letter-spacing: 0.15,
+        $line-height: 1.43,
+        $letter-spacing: 0.00938em,
       ),
     $subtitle-2:
       mat.define-typography-level(
         $font-family: Roboto,
         $font-weight: 500,
         $font-size: 1.3rem,
-        $line-height: 18.2px,
-        $letter-spacing: 0.1,
+        $line-height: 1.57,
+        $letter-spacing: 0.00714em,
       ),
     $body-1:
       mat.define-typography-level(
         $font-family: Roboto,
         $font-weight: 400,
         $font-size: 1.3rem,
-        $line-height: 15.6px,
-        $letter-spacing: 0.17,
+        $line-height: 1.34,
+        $letter-spacing: 0.01071em,
       ),
     $body-2:
       mat.define-typography-level(
         $font-family: Roboto,
         $font-weight: 400,
         $font-size: 1.4rem,
-        $line-height: 19.6px,
-        $letter-spacing: 0.15,
+        $line-height: 1.43,
+        $letter-spacing: 0.00938em,
       ),
     $button:
       mat.define-typography-level(
         $font-family: Roboto,
         $font-weight: 500,
         $font-size: 1.27rem,
-        $line-height: 18px,
-        $letter-spacing: 0.4,
+        $line-height: 1.75,
+        $letter-spacing: 0.02857em,
       ),
     $caption:
       mat.define-typography-level(
         $font-family: Roboto,
         $font-weight: 400,
         $font-size: 1.1rem,
-        $line-height: 15.4px,
-        $letter-spacing: 0.4,
+        $line-height: 1.5,
+        $letter-spacing: 0.029em,
       ),
   ),
   (
@@ -112,7 +111,6 @@ $typography-global-config: map.merge(
     "overline": $overline,
   )
 );
-
 .mat-headline-5,
 .mat-h1,
 h1,
