--- a/maquetacion/src/app/app.component.html
+++ b/maquetacion/src/app/app.component.html
@@ -1,187 +1,118 @@
-<!-- SLIDE TOGGLE -->
-<mat-slide-toggle> Slide me! </mat-slide-toggle>
-<!-- CHECKBOX -->
-<mat-checkbox class="example-margin" size="small"> Checked </mat-checkbox>
-<br />
-<!-- SLIDER -->
-<mat-slider size="small" color="accent">
-  <input matSliderThumb />
-</mat-slider>
-<mat-slider>
-  <input matSliderThumb />
-</mat-slider>
-<br />
-<!-- SPINNER -->
-<mat-spinner size="small"></mat-spinner>
-<!-- --EXPANSION PANEL y/o Accordion -->
-<br />
+<div class="d-flex a-center s-evenly column p-base full-view">
 
-<!-- ---- BUTON GROUP -->
-<br />
-<br />
-<!-- -------BUTTON -->
-<button mat-button [matMenuTriggerFor]="menu">Menu</button>
-<mat-menu size="small" #menu="matMenu">
-  <button size="small" mat-menu-item>Item 1</button>
-  <button size="small" mat-menu-item>Item 2</button>
-</mat-menu>
-<br />
-<!-- -----LISTAS -->
-
-<br />
-<!-- ------------CHIPS -->
-<mat-chip size="small"
-  >One fish
-  <button matChipRemove>
-    <mat-icon>cancel</mat-icon>
-  </button>
-</mat-chip>
-<mat-chip
-  >Two fish
-  <button matChipRemove>
-    <mat-icon>cancel</mat-icon>
-  </button>
-</mat-chip>
-<mat-chip>
-  <img
-    matChipAvatar
-    src="https://material.angular.io/assets/img/examples/shiba1.jpg"
-    alt="Photo of a Shiba Inu"
-  />
-  Dog one
-</mat-chip>
-<mat-chip-option size="small" color="accent" selected
-  >Accent fish</mat-chip-option
->
-<mat-chip-option color="warn">Warn fish</mat-chip-option>
-<br />
-
-<!-- RADIO BUTTON  -->
-<mat-radio-group class="small">
-  <mat-radio-button>Option 1</mat-radio-button>
-  <mat-radio-button>Option 2</mat-radio-button>
-</mat-radio-group>
-<br />
-<button
-  mat-fab
-  color="accent"
-  extended
-  size="small"
-  aria-label="Example icon button with a bookmark icon"
->
-  hola
-  <mat-icon>favorite</mat-icon>
-</button>
-<button
-  mat-fab
-  color="accent"
-  extended
-  size="medium"
-  aria-label="Example icon button with a bookmark icon"
->
-  <mat-icon>favorite</mat-icon>
-  hola
-</button>
-<button
-  mat-fab
-  color="accent"
-  extended
-  size="large"
-  aria-label="Example icon button with a bookmark icon"
->
-  <mat-icon>favorite</mat-icon>
-  hola
-</button>
-<button
-  mat-fab
-  size="small"
-  color="accent"
-  aria-label="Example icon button with a bookmark icon"
->
-  <mat-icon>bookmark</mat-icon>
-</button>
-<button
-  mat-fab
-  color="accent"
-  aria-label="Example icon button with a bookmark icon"
->
-  <mat-icon>bookmark</mat-icon>
-</button>
-<button
-  mat-fab
-  color="accent"
-  size="large"
-  aria-label="Example icon button with a bookmark icon"
->
-  <mat-icon>bookmark</mat-icon>
-</button>
-<br />
-<mat-form-field appearance="outline" size="small">
-  <mat-label>Fill form field</mat-label>
-  <input matInput placeholder="Placeholder" />
-  <!-- <mat-icon matSuffix size="small">sentiment_very_satisfied</mat-icon>
-  <mat-hint>Hint</mat-hint> -->
-</mat-form-field>
-<br />
-<mat-radio-group aria-label="Select an option">
-  <mat-radio-button size="small" value="1">Option 1</mat-radio-button>
-  <mat-radio-button value="2">Option 2</mat-radio-button>
-</mat-radio-group>
-<br />
-<mat-icon size="small">house</mat-icon>
-<mat-icon size="medium">house</mat-icon>
-<mat-icon size="large">house</mat-icon>
-<br />
-<mat-button-toggle-group size="small" #group="matButtonToggleGroup">
-  <mat-button-toggle value="left" aria-label="Text align left">
-    <mat-icon>format_align_left</mat-icon>
-  </mat-button-toggle>
-  <mat-button-toggle value="center" aria-label="Text align center">
-    <mat-icon>format_align_center</mat-icon>
-  </mat-button-toggle>
-  <mat-button-toggle value="right" aria-label="Text align right">
-    <mat-icon>format_align_right</mat-icon>
-  </mat-button-toggle>
-  <mat-button-toggle value="justify" disabled aria-label="Text align justify">
-    <mat-icon>format_align_justify</mat-icon>
-  </mat-button-toggle>
-</mat-button-toggle-group>
-<br />
-<button mat-raised-button color="accent" size="small">
-  <mat-icon>home</mat-icon>
-  Small
-</button>
-<button mat-raised-button color="accent" size="medium">
-  Medium
-  <mat-icon>home</mat-icon>
-</button>
-<button mat-raised-button size="large" color="accent">
-  <mat-icon>home</mat-icon>
-  Large
-</button>
-<br />
-<mat-list role="list" size="small">
-  <mat-list-item role="listitem"
-    >Item 1
-    <button mat-icon-button color="primary">
-      <mat-icon>home</mat-icon>
+  <!-- ------BUTTON -->
+  <div class="d-flex clomun a-center">
+    <h4>Buttons</h4>
+  </div>
+  <div class="d-flex a-center s-evenley">
+    <button mat-raised-button color="primary">Small</button>
+    <button mat-raised-button color="primary">
+      Small<mat-icon>add</mat-icon>
     </button>
-  </mat-list-item>
-  <mat-list-item role="listitem">Item 2</mat-list-item>
-  <mat-list-item role="listitem">Item 3</mat-list-item>
-</mat-list>
-<br />
-<mat-tab-group>
-  <mat-tab label="First"> Content 1 </mat-tab>
-  <mat-tab label="Second"> Content 2 </mat-tab>
-  <mat-tab label="Third"> Content 3 </mat-tab>
-</mat-tab-group>
-<button mat-icon-button size="small" color="primary">
-  <mat-icon>home</mat-icon>
-</button>
-<button mat-icon-button size="medium" color="primary">
-  <mat-icon>home</mat-icon>
-</button>
-<button mat-icon-button size="large" color="primary">
-  <mat-icon>home</mat-icon>
-</button>
+  </div>
+
+  <!--  PROGRES SPINNER -->
+  <div class="d-flex a-center s-evenly column">
+    <h4>Spinner</h4>
+    <mat-spinner></mat-spinner>
+  </div>
+
+  <!-- LISTAS -->
+  <div class="d-flex a-center column">
+    <h4>Listas</h4>
+    <mat-list role="list">
+      <mat-list-item role="listitem">Item 1</mat-list-item>
+      <mat-list-item role="listitem">Item 2</mat-list-item>
+      <mat-list-item role="listitem">Item 3</mat-list-item>
+    </mat-list>
+  </div>
+
+  
+
+  <div class="d-flex a-center s-evenly column">
+    <h4>Iconos</h4>
+    <mat-icon>add</mat-icon>
+    <mat-icon>menu</mat-icon>
+  </div>
+
+  <!-- LISTAS CON ICONOS -->
+    <div class="d-flex a-center j-center">
+      <mat-list role="list" size="small" ap>
+        <mat-list-item role="listitem">
+          <p>Hello world</p>
+          <button mat-icon-button matListItemMeta>
+            <mat-icon >note</mat-icon>
+          </button>
+        </mat-list-item>
+        <mat-list-item role="listitem">
+          <p>Hello world</p>
+          <button mat-icon-button matListItemMeta>
+            <mat-icon matListItemIcon>note</mat-icon>
+          </button>
+        </mat-list-item>  
+        <mat-list-item role="listitem">
+          <p>Hello world</p>
+          <button mat-icon-button matListItemMeta>
+            <mat-icon matListItemIcon>note</mat-icon>
+          </button>
+        </mat-list-item>
+        </mat-list >
+    </div>
+
+  <!-- BUTTON GROUP -->
+  <div class="d-flex a-center j-center column">
+    <h4>Button group</h4>
+    <div>
+      <mat-button-toggle-group>
+        <mat-button-toggle value="bold">Bold</mat-button-toggle>
+        <mat-button-toggle value="italic">Italic</mat-button-toggle>
+        <mat-button-toggle value="underline">Underline</mat-button-toggle>
+      </mat-button-toggle-group>
+    </div>
+  </div>
+
+  <!-- EXPANSION PANEL -->
+  <div class="d-flex a-center j-center m-base column">
+    <h4>Expansion panel</h4>
+    <br />
+    <div>
+      <mat-accordion>
+        <mat-expansion-panel hideToggle>
+          <mat-expansion-panel-header>
+            <mat-panel-title> This is the expansion title </mat-panel-title>
+            <mat-panel-description>
+              This is a summary of the content
+            </mat-panel-description>
+          </mat-expansion-panel-header>
+          <p>This is the primary content of the panel.</p>
+        </mat-expansion-panel>
+        <mat-expansion-panel
+          (opened)="panelOpenState = true"
+          (closed)="panelOpenState = false"
+        >
+          <mat-expansion-panel-header>
+            <mat-panel-title> Self aware panel </mat-panel-title>
+            <mat-panel-description>
+              Currently I am {{ panelOpenState ? "open" : "closed" }}
+            </mat-panel-description>
+          </mat-expansion-panel-header>
+          <p>I'm visible because I am open</p>
+        </mat-expansion-panel>
+      </mat-accordion>
+    </div>
+  </div>
+
+  <!-- ICON BUTTON -->
+  <div class="d-flex a-center s-evenly m-base">
+    <button mat-icon-button color="primary">
+      <mat-icon>add</mat-icon>
+    </button>
+    <button mat-icon-button color="accent">
+      <mat-icon>add</mat-icon>
+    </button>
+    <button mat-icon-button color="warn">
+      <mat-icon>add</mat-icon>
+    </button>
+  </div>
+
+</div>
