--- a/maquetacion/src/app/app.component.html
+++ b/maquetacion/src/app/app.component.html
@@ -1,5 +1,11 @@
 <div class="d-flex a-center s-evenly column p-base full-view">
-
+  <!-- MAT RADIO GROUP -->
+  <div class="d-flex clomun a-center">
+    <mat-radio-group >
+      <mat-radio-button></mat-radio-button>
+      <mat-radio-button></mat-radio-button>
+    </mat-radio-group>
+  </div>
   <!-- ------BUTTON -->
   <div class="d-flex clomun a-center">
     <h4>Buttons</h4>
@@ -27,8 +33,6 @@
     </mat-list>
   </div>
 
-  
-
   <div class="d-flex a-center s-evenly column">
     <h4>Iconos</h4>
     <mat-icon>add</mat-icon>
@@ -36,28 +40,28 @@
   </div>
 
   <!-- LISTAS CON ICONOS -->
-    <div class="d-flex a-center j-center">
-      <mat-list role="list" size="small" ap>
-        <mat-list-item role="listitem">
-          <p>Hello world</p>
-          <button mat-icon-button matListItemMeta>
-            <mat-icon >note</mat-icon>
-          </button>
-        </mat-list-item>
-        <mat-list-item role="listitem">
-          <p>Hello world</p>
-          <button mat-icon-button matListItemMeta>
-            <mat-icon matListItemIcon>note</mat-icon>
-          </button>
-        </mat-list-item>  
-        <mat-list-item role="listitem">
-          <p>Hello world</p>
-          <button mat-icon-button matListItemMeta>
-            <mat-icon matListItemIcon>note</mat-icon>
-          </button>
-        </mat-list-item>
-        </mat-list >
-    </div>
+  <div class="d-flex a-center j-center">
+    <mat-list role="list" size="small" ap>
+      <mat-list-item role="listitem">
+        <p>Hello world</p>
+        <button mat-icon-button matListItemMeta>
+          <mat-icon>note</mat-icon>
+        </button>
+      </mat-list-item>
+      <mat-list-item role="listitem">
+        <p>Hello world</p>
+        <button mat-icon-button matListItemMeta>
+          <mat-icon matListItemIcon>note</mat-icon>
+        </button>
+      </mat-list-item>
+      <mat-list-item role="listitem">
+        <p>Hello world</p>
+        <button mat-icon-button matListItemMeta>
+          <mat-icon matListItemIcon>note</mat-icon>
+        </button>
+      </mat-list-item>
+    </mat-list>
+  </div>
 
   <!-- BUTTON GROUP -->
   <div class="d-flex a-center j-center column">
@@ -103,8 +107,9 @@
   </div>
 
   <!-- ICON BUTTON -->
-  <div class="d-flex a-center s-evenly m-base">
-    <button mat-icon-button color="primary">
+  <div class="d-flex a-center s-evenly m-base column">
+    <h4>Icon buttons</h4>
+    <button mat-icon-button color="primary" size="small">
       <mat-icon>add</mat-icon>
     </button>
     <button mat-icon-button color="accent">
@@ -115,4 +120,90 @@
     </button>
   </div>
 
+  <!-- TABS -->
+  <div class="d-flex a-center s-evenly m-base column">
+    <h4>Tabs</h4>
+    <mat-tab-group>
+      <mat-tab label="First"> Content 1 </mat-tab>
+      <mat-tab label="Second"> Content 2 </mat-tab>
+      <mat-tab label="Third"> Content 3 </mat-tab>
+    </mat-tab-group>
+  </div>
+
+  <!-- SLIDER -->
+  <div class="min-width d-flex a-center s-evenly m-base column">
+    <mat-slider>
+      <input matSliderThumb />
+    </mat-slider>
+  </div>
+
+  <!-- FAB BUTTON -->
+  <div class="d-flex j-center a-center column">
+    <div class="d-flex">
+      <h4>Fab button</h4>
+      <button
+        mat-fab
+        color="primary"
+        aria-label="Example icon button with a delete icon"
+      >
+        <mat-icon>delete</mat-icon>
+      </button>
+      <p>Mini fab</p>
+      <button
+        mat-mini-fab
+        color="primary"
+        aria-label="Example icon button with a menu icon"
+      >
+        <mat-icon>menu</mat-icon>
+      </button>
+      <p>Extended fab</p>
+      <button mat-fab extended disabled>
+        <mat-icon>favorite</mat-icon>
+        Disabled
+      </button>
+    </div>
+  </div>
+
+  <!-- CHECKBOX -->
+  <div class="d-flex a-center column">
+    <h4>Checkbox</h4>
+    <mat-checkbox></mat-checkbox>
+    <mat-checkbox></mat-checkbox>
+  </div>
+
+  <!-- Data table -->
+  <div class="d-flex column">
+    <h4>Table</h4>
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <!--- Note that these columns can be defined in any order.
+          The actual rendered columns are set as a property on the row definition" -->
+
+      <!-- Position Column -->
+      <ng-container matColumnDef="position">
+        <th mat-header-cell *matHeaderCellDef>No.</th>
+        <td mat-cell *matCellDef="let element">{{ element.position }}</td>
+      </ng-container>
+
+      <!-- Name Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+      </ng-container>
+
+      <!-- Weight Column -->
+      <ng-container matColumnDef="weight">
+        <th mat-header-cell *matHeaderCellDef>Weight</th>
+        <td mat-cell *matCellDef="let element">{{ element.weight }}</td>
+      </ng-container>
+
+      <!-- Symbol Column -->
+      <ng-container matColumnDef="symbol">
+        <th mat-header-cell *matHeaderCellDef>Symbol</th>
+        <td mat-cell *matCellDef="let element">{{ element.symbol }}</td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+  </div>
 </div>
