--- a/maquetacion/src/theme/_sizes.scss
+++ b/maquetacion/src/theme/_sizes.scss
@@ -11,8 +11,7 @@
     display: none;
   }
 }
-//////////// SMALL
-///
+//////////// SMALL CONFIGURATION
 // Conversion de REM to PX, 1rem = 10px
 
 // Componentes con pseudo-clase  :not()
@@ -21,8 +20,7 @@
   &.mat-mdc-chip,
   &.mat-md-chip-option {
     &.mat-mdc-standard-chip .mdc-evolution-chip__checkmark {
-      width: 1.6rem;
-      height: 1.6rem;
+     @include icon-size(1.6rem, null);
     }
     &.mat-icon {
       @include icon-size(1.428571428571429rem, 1.285714285714286rem);
@@ -57,10 +55,10 @@
   height: 4rem !important;
 }
 
-// ICON
-.mat-icon {
-  @include icon-size(1.6rem !important, 1.3rem !important);
-}
+// // ICON
+// .mat-icon {
+//   @include icon-size(1.6rem !important, 1.3rem !important);
+// }
 
 //BUTTON TOGGLE
 .mat-button-toggle-group {
@@ -124,12 +122,23 @@
   &.mat-mdc-extended-fab {
     height: 3.2rem;
   }
+  .material-icons, .mat-icon{
+    @include icon-size(18px , 16px );
+  }
 }
+// EXTEND FAB
+.mat-mdc-extended-fab > .mat-icon,
+.mat-mdc-extended-fab > .material-icons {
+  @include icon-size(18px , 16px );
+}
+// MINI FAB
 .mdc-fab--mini {
   width: 3.6rem !important;
   height: 3.6rem !important;
+  .material-icons, .mat-icon{
+    @include icon-size(18px , 16px );
+  }
 }
-
 // CHECKBOX
 .mdc-checkbox {
   @include mat.checkbox-density(-3);
