ajuste iconos en listas

--- a/maquetacion/src/app/app.component.html
+++ b/maquetacion/src/app/app.component.html
@@ -129,7 +129,7 @@
 
   <!-- SLIDER -->
   <div class="min-width d-flex a-center s-evenly m-base column">
-    <mat-slider>
+    <mat-slider size="medium">
       <input matSliderThumb />
     </mat-slider>
   </div>
