--- a/maquetacion/src/app/app.component.html
+++ b/maquetacion/src/app/app.component.html
@@ -1,3 +1,265 @@
+
+<div class="container-elevations">
+  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z1">ERP-mat-elevation-z1</div>
+  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z2">ERP-mat-elevation-z2</div>
+  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z3">ERP-mat-elevation-z3</div>
+  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z4">ERP-mat-elevation-z4</div>
+  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z5">ERP-mat-elevation-z5</div>
+  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z6">ERP-mat-elevation-z6</div>
+  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z7">ERP-mat-elevation-z7</div>
+  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z8">ERP-mat-elevation-z8</div>
+  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z9">ERP-mat-elevation-z9</div>
+  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z10">ERP-mat-elevation-z10</div>
+  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z11">ERP-mat-elevation-z11</div>
+  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z12">ERP-mat-elevation-z12</div>
+  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z13">ERP-mat-elevation-z13</div>
+  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z14">ERP-mat-elevation-z14</div>
+  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z15">ERP-mat-elevation-z15</div>
+  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z16">ERP-mat-elevation-z16</div>
+  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z17">ERP-mat-elevation-z17</div>
+  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z18">ERP-mat-elevation-z18</div>
+  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z19">ERP-mat-elevation-z19</div>
+  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z20">ERP-mat-elevation-z20</div>
+  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z21">ERP-mat-elevation-z21</div>
+  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z22">ERP-mat-elevation-z22</div>
+  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z23">ERP-mat-elevation-z23</div>
+  <div class="elevation-example centered mat-subtitle-2 mat-elevation-z24">ERP-mat-elevation-z24</div>
+</div>
+
+
+<div class="mat-elevation-z2 t-f-s"  style="display: flex; align-items: flex-start; justify-content: center; gap: 6px; margin: 3rem auto; padding: 1rem; width: 31%; flex-wrap: wrap;">
+
+  <button disabled  size="large" mat-fab color="primary">
+    <mat-icon>bookmark</mat-icon>
+  </button>
+  <button disabled size="large" mat-fab color="accent">
+    <mat-icon>bookmark</mat-icon>
+  </button>
+  
+  <button disabled size="large" mat-fab color="warn">
+    <mat-icon>bookmark</mat-icon>
+  </button>
+  
+  <button disabled size="large" mat-fab color="success">
+    <mat-icon>bookmark</mat-icon>
+  </button>
+  
+  <button disabled size="large" mat-fab color="info">
+    <mat-icon>bookmark</mat-icon>
+  </button>
+  
+  <button disabled size="large" mat-fab color="warning">
+    <mat-icon>bookmark</mat-icon>
+  </button>
+
+
+  <button disabled  mat-fab color="primary">
+    <mat-icon>bookmark</mat-icon>
+  </button>
+  <button disabled  mat-fab color="accent">
+    <mat-icon>bookmark</mat-icon>
+  </button>
+  
+  <button disabled  mat-fab color="warn">
+    <mat-icon>bookmark</mat-icon>
+  </button>
+  
+  <button disabled  mat-fab color="success">
+    <mat-icon>bookmark</mat-icon>
+  </button>
+  
+  <button disabled  mat-fab color="info">
+    <mat-icon>bookmark</mat-icon>
+  </button>
+  
+  <button disabled  mat-fab color="warning">
+    <mat-icon>bookmark</mat-icon>
+  </button>
+
+
+  <button mat-fab disabled size="small" color="primary">
+    <mat-icon>bookmark</mat-icon>
+  </button>
+  <button disabled size="small" mat-fab color="accent">
+    <mat-icon>bookmark</mat-icon>
+  </button>
+  
+  <button disabled size="small" mat-fab color="warn">
+    <mat-icon>bookmark</mat-icon>
+  </button>
+  
+  <button disabled size="small" mat-fab color="success">
+    <mat-icon>bookmark</mat-icon>
+  </button>
+  
+  <button disabled size="small" mat-fab color="info">
+    <mat-icon>bookmark</mat-icon>
+  </button>
+  
+  <button disabled size="small" mat-fab color="warning">
+    <mat-icon>bookmark</mat-icon>
+  </button>
+
+</div>
+
+<div class="mat-elevation-z2 t-f-s"  style="display: flex; align-items: flex-start; justify-content: center; gap: 6px; margin: 3rem auto; padding: 1rem; width: 55%; flex-wrap: wrap;">
+  
+
+  <mat-button-toggle-group disabled size="small">
+    <mat-button-toggle value="left" aria-label="Text align left">
+      <mat-icon>format_align_left</mat-icon>
+    </mat-button-toggle>
+    <mat-button-toggle value="center" aria-label="Text align center">
+      <mat-icon>format_align_center</mat-icon>
+    </mat-button-toggle>
+    <mat-button-toggle value="right" aria-label="Text align right">
+      <mat-icon>format_align_right</mat-icon>
+    </mat-button-toggle>
+    <mat-button-toggle value="justify" disabled aria-label="Text align justify">
+      <mat-icon>format_align_justify</mat-icon>
+    </mat-button-toggle>
+  </mat-button-toggle-group>
+
+  <mat-button-toggle-group disabled >
+    <mat-button-toggle value="left" aria-label="Text align left">
+      <mat-icon>format_align_left</mat-icon>
+    </mat-button-toggle>
+    <mat-button-toggle value="center" aria-label="Text align center">
+      <mat-icon>format_align_center</mat-icon>
+    </mat-button-toggle>
+    <mat-button-toggle value="right" aria-label="Text align right">
+      <mat-icon>format_align_right</mat-icon>
+    </mat-button-toggle>
+    <mat-button-toggle value="justify" disabled aria-label="Text align justify">
+      <mat-icon>format_align_justify</mat-icon>
+    </mat-button-toggle>
+  </mat-button-toggle-group>
+
+  <mat-button-toggle-group disabled size="large">
+    <mat-button-toggle value="left" aria-label="Text align left">
+      <mat-icon>format_align_left</mat-icon>
+    </mat-button-toggle>
+    <mat-button-toggle value="center" aria-label="Text align center">
+      <mat-icon>format_align_center</mat-icon>
+    </mat-button-toggle>
+    <mat-button-toggle value="right" aria-label="Text align right">
+      <mat-icon>format_align_right</mat-icon>
+    </mat-button-toggle>
+    <mat-button-toggle value="justify" disabled aria-label="Text align justify">
+      <mat-icon>format_align_justify</mat-icon>
+    </mat-button-toggle>
+  </mat-button-toggle-group>
+  
+</div>
+
+<div class="mat-elevation-z2 t-f-s"  style="display: flex; align-items: flex-start; justify-content: center; gap: 6px; margin: 3rem auto; padding: 1rem; width: 34%; flex-wrap: wrap;">
+
+      <button disabled  mat-button size="small" color="primary">
+      <mat-icon>add</mat-icon>
+      <span>small</span>
+    </button>
+    <button disabled mat-raised-button size="small" color="primary">
+      <mat-icon>add</mat-icon>
+      <span>small</span>
+    </button>
+    <button disabled mat-flat-button size="small" color="primary">
+      <mat-icon>add</mat-icon>
+      <span>small</span>
+    </button>
+    <button disabled mat-stroked-button size="small" color="primary">
+      <mat-icon>add</mat-icon>
+      <span>small</span>
+    </button>
+
+    <button disabled mat-button  color="primary">
+      <mat-icon>add</mat-icon>
+      <span>medium</span>
+    </button>
+    <button disabled mat-raised-button  color="primary">
+      <mat-icon>add</mat-icon>
+      <span>medium</span>
+    </button>
+    <button disabled mat-flat-button  color="primary">
+      <mat-icon>add</mat-icon>
+      <span>medium</span>
+    </button>
+    <button disabled mat-stroked-button  color="primary">
+      <mat-icon>add</mat-icon>
+      <span>medium</span>
+    </button>
+
+
+    <button disabled mat-button size="large" color="primary">
+      <mat-icon>add</mat-icon>
+      <span>large</span>
+    </button>
+    <button disabled mat-raised-button size="large" color="primary">
+      <mat-icon>add</mat-icon>
+      <span>large</span>
+    </button>
+    <button disabled mat-flat-button size="large" color="primary">
+      <mat-icon>add</mat-icon>
+      <span>large</span>
+    </button>
+    <button disabled mat-stroked-button size="large" color="primary">
+      <mat-icon>add</mat-icon>
+      <span>large</span>
+    </button>
+
+
+</div>
+
+<div class="mat-elevation-z2 t-f-s"  style="display: flex; align-items: flex-start; justify-content: center; gap: 6px; margin: 3rem auto; padding: 1rem; width: 45%; flex-wrap: wrap;">
+  
+  <mat-chip disabled >
+    <img matChipAvatar src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
+    Dog two
+  </mat-chip>
+
+  <mat-chip-row disabled>
+      icon
+      <button matChipRemove >
+        <mat-icon>cancel</mat-icon>
+      </button>
+  </mat-chip-row>
+
+  <mat-chip-option color="primary" selected disabled>Accent fish</mat-chip-option>
+  <mat-chip-option color="accent" selected disabled>Accent fish</mat-chip-option>
+  <mat-chip-option color="warn" selected disabled>Accent fish</mat-chip-option>
+
+
+
+</div>
+
+<div class="mat-elevation-z2 t-f-s"  style="display: flex; align-items: flex-start; justify-content: center; gap: 6px; margin: 3rem auto; padding: 1rem; width: 65%; flex-wrap: wrap;">
+  <mat-list disabled>
+    <div mat-subheader>Folders</div>
+    <mat-list-item *ngFor="let folder of folders">
+      <mat-icon matListItemIcon>folder</mat-icon>
+      <div matListItemTitle>{{folder.name}}</div>
+      <div matListItemLine>{{folder.updated | date}}</div>
+    </mat-list-item>
+    <mat-divider></mat-divider>
+    <div mat-subheader>Notes</div>
+    <mat-list-item *ngFor="let note of notes">
+      <mat-icon matListItemIcon>note</mat-icon>
+      <div matListItemTitle>{{note.name}}</div>
+      <div matListItemLine>{{note.updated | date}}</div>
+    </mat-list-item>
+  </mat-list>
+</div>
+
+<div class="mat-elevation-z2 t-f-s"  style="display: flex; align-items: flex-start; justify-content: center; gap: 6px; margin: 3rem auto; padding: 1rem; width: 65%; flex-wrap: wrap;">
+
+  <mat-list>
+    <mat-list-item>Item 1</mat-list-item>
+    <mat-divider></mat-divider>
+    <mat-list-item>Item 2</mat-list-item>
+    <mat-divider></mat-divider>
+    <mat-list-item>Item 3</mat-list-item>
+  </mat-list>
+</div>
+
 <div class="d-flex a-center s-evenly column p-base full-view medium">
   <!-- MAT RADIO GROUP -->
   <div class="d-flex clomun a-center">
@@ -204,3 +466,6 @@
     </table>
   </div>
 </div>
+
+<!-- <app-shadows-components-list></app-shadows-components-list> -->
+
